--- a/drivesafenotifier/src/main/AndroidManifest.xml
+++ b/drivesafenotifier/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
-        <meta-data
-            android:name="com.google.android.awareness.API_KEY"
-            android:value="AIzaSyCuucbBEnhQl4wxf68KNOS9-LFr1l6-NxU"/>
+        <!--<meta-data-->
+            <!--android:name="com.google.android.awareness.API_KEY"-->
+            <!--android:value="AIzaSyCuucbBEnhQl4wxf68KNOS9-LFr1l6-NxU"/>-->
 
     </application>
 
